# DSL

./: LLпарсер.md  LRпарсер.md  SU-perevod_Karasev_Grebnev_2 (1).pptx  ast.yaml  ast_after.yaml  ast_before.yaml  attribute_evaluator.py  build_ast.py  dsl_info.py  grammar_object.py  new_pseco_grammar.txt  post_token.yaml  post_token_pseco.yaml  pyproject.toml  requirements.txt  scanner.py  settings.py  tokens.yaml  wirth_matrix.md  СУперевод.md
.github/workflows/: run-tests.yaml
DSLTools/: __init__.py  main.py  post_token.yaml
DSLTools/core/: ast_proccessor.py  astgenerator.py  converters.py  dot_generator.py  dsl_generator.py  extractors.py  go_serializer.py  grammar_lexr.py  grammar_object_ser.py  grammar_parsers.py  retranslator.py  rule_parser.py  rule_wirth_converter.py  scanning.py  tokenpostprocessing.py  tools.py  vertex_tool.py  wirth_diagram_generation.py
DSLTools/examples/GRAPHS/: GRAPHS.rbnf
DSLTools/examples/PSECO/: PSECO.rbnf  dsl_info.py  metainfo.json  pseco.rbnf  (+3 more)
DSLTools/implementations/: dsl_scaner.py  sample_of_lexer.py  sampleofevaluationinterface.py  token_post_processor.py
DSLTools/models/: IYamlMedia.py  __init__.py  ast.py  diagraph.py  interface.py  legacy_for_wirth.py  parse.py  rule_wirth_converter.py  support.py  tokens.py
DSLTools/utils/: cli.py  file_ops.py  wirth_render.py
PSECO_NEW/wirth/: Arguments.gv  Assignment.gv  Block.gv  FunctionCall.gv  FunctionDecl.gv  Identifier.gv  Loop.gv  NextFor.gv  Number.gv  Select.gv  Statement.gv  Text.gv
_examples/expression/: expression.sgi
afterscan/: afterscan.py
syntax/: core.py
(+341 files in other folders)
