[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DSL"
version = "0.1"
dependencies = [
    "graphviz==0.20.1",
    "pydot==1.4.2",
    "pytest==8.3.5"
]

[tool.setuptools.packages.find]
where = ["."]  # Искать пакеты в корне
include = ["DSLTools*", "syntax*", "afterscan*"]  # Явно указать пакеты